[project]
name = "project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "matplotlib>=3.10.0",
    "pandas>=2.2.3",
    "pyarrow>=19.0.0",
    "scikit-learn>=1.6.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "xgboost>=2.1.4",
]
